--- a/src/main/webapp/WEB-INF/views/hartigehap/restaurant.jspx
+++ b/src/main/webapp/WEB-INF/views/hartigehap/restaurant.jspx
@@ -16,6 +16,7 @@
 	<spring:message code="label_kitchen_subsystem" var="labelKitchenSubsystem" />
 	<spring:message code="label_waiter_subsystem" var="labelWaiterSubsystem" />
 	<spring:message code="label_customer_subsystem" var="labelCustomerSubsystem" />
+	<spring:message code="label_reservation_subsystem" var="labelReservationSubsystem" />
 	<spring:message code="label_dining_tables" var="labelDiningTables" />
 	<spring:message code="label_dining_table" var="labelDiningTable" />
 
@@ -85,6 +86,18 @@
 				<ul class="list-group">
 					<spring:url var="customerSubsystem" value="/restaurants/${restaurant.id}/customers" />
 					<a href="${customerSubsystem}" class="list-group-item">${labelCustomerSubsystem}</a>
+				</ul>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">${labelReservationSubsystem}</h3>
+				</div>
+				<ul class="list-group">
+					<spring:url var="reservationSubsystem" value="/restaurants/${restaurant.id}/reservations" />
+					<a href="${reservationSubsystem}" class="list-group-item">${labelReservationSubsystem}</a>
 				</ul>
 			</div>
 		</div>
