--- a/src/main/webapp/WEB-INF/views/hartigehap/editreservations.jspx
+++ b/src/main/webapp/WEB-INF/views/hartigehap/editreservations.jspx
@@ -27,6 +27,8 @@
 	<spring:message code="label_reservation_delete" var="labelReservationDelete" />
 	<spring:message code="date_format_pattern" var="dateFormatPattern" />
 	<spring:message code="text_there_are_no_reservations" var="textThereAreNoReservations" />
+	<spring:message code="label_reservation_form_facility" var=ReservationFormFacility />
+	<spring:message code="label_reservation_form_decorators" var=ReservationFormDecorators />
 		
 	<spring:message code="text_clear" var="textClear" />
 	<spring:message code="text_save" var="textSave" />
@@ -48,47 +50,3 @@
 		</c:if>
 	</div>
 	
-	<form:form modelAttribute="reservation" id="reservationUpdateForm" enctype="multipart/form-data" method="${reservation.id==null ? 'post':'put'}">
-		<div class="row">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h3 class="panel-title">${formTitle}</h3>
-					<sec:authorize access="hasRole('ROLE_EMPLOYEE')">
-					<span class="pull-right" style="height: 10px;">
-						<ul class="nav panel-tabs">
-							<li><button type="submit" class="btn btn-success">${textSave}</button></li>
-							<li><button type="reset" class="btn btn-warning">${textReset}</button></li>
-						</ul>
-					</span>
-					</sec:authorize>
-				</div>
-				<div class="panel-body">
-					<div class="input-group input-group-100">
-						<span class="input-group-addon input-group-min-width" id="name" path="name">${labelReservationName}</span>
-						<form:input path="name" class="form-control capitalise" placeholder="${labelReservationName}" aria-describedby="name" />
-						<div>
-							<form:errors path="name" cssClass="error" />
-						</div>
-					</div>
-
-					<p />
-
-					<div class="input-group input-group-100">
-						<span class="input-group-addon input-group-min-width" id="groupSize" path="groupSize">${labelReservationGroupSize}</span>
-						<form:input path="groupSize" class="form-control capitalise" placeholder="${labelReservationGroupSize}" aria-describedby="groupSize" />
-						<div>
-							<form:errors path="groupSize" cssClass="error" />
-						</div>
-					</div>
-
-					
-
-					
-							
-						</span>
-					</div>
-				</div>
-			</div>
-		
-	</form:form>
-</div>
