--- a/src/main/webapp/WEB-INF/views/hartigehap/showreservations.jspx
+++ b/src/main/webapp/WEB-INF/views/hartigehap/showreservations.jspx
@@ -1,86 +1,123 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <div xmlns:jsp="http://java.sun.com/JSP/Page"
-	 xmlns:c="http://java.sun.com/jsp/jstl/core"
-	 xmlns:spring="http://www.springframework.org/tags"
-	 xmlns:sec="http://www.springframework.org/security/tags"
-	 version="2.0">
+  xmlns:c="http://java.sun.com/jsp/jstl/core"
+  xmlns:spring="http://www.springframework.org/tags"
+  xmlns:sec="http://www.springframework.org/security/tags"
+  version="2.0">
 
-	
+ 
 
-	<jsp:directive.page contentType="text/html;charset=UTF-8" />
-	<jsp:output omit-xml-declaration="yes" />
-	
-	<!-- Add elvariables to help our IDE for code completion -->
-	<!--@elvariable id="message" type="edu.avans.hartigehap.web.form.Message"-->
-	<!--@elvariable id="customer" type="edu.avans.hartigehap.domain.Customer"-->
-	<!--@elvariable id="restaurant" type="edu.avans.hartigehap.domain.Restaurant"-->
+ <jsp:directive.page contentType="text/html;charset=UTF-8" />
+ <jsp:output omit-xml-declaration="yes" />
+ 
+ <!-- Add elvariables to help our IDE for code completion -->
+ <!--@elvariable id="message" type="edu.avans.hartigehap.web.form.Message"-->
+ <!--@elvariable id="customer" type="edu.avans.hartigehap.domain.Customer"-->
+ <!--@elvariable id="restaurant" type="edu.avans.hartigehap.domain.Restaurant"-->
 
-	
-	<spring:message code="label_restaurant" var="labelRestaurant" />
-	<spring:message code="label_reservation_subsystem" var="labelReservationSubsystem" />
-	<spring:message code="label_reservation_description" var="labelReservationDescription" />
-	<spring:message code="label_reservation_update" var="labelReservationUpdate" />
-	<spring:message code="label_reservation_groupsize" var="labelReservationGroupSize" />
-	<spring:message code="label_reservation_name" var="labelReservationName" />
-	<spring:message code="label_reservation_word" var="labelReservationWord" />
-	<spring:message code="label_reservation_roomID" var="labelReservationRoomID" />
-	<spring:message code="label_reservation_price" var="labelReservationPrice" />
-	<spring:message code="label_reservation_update" var="labelReservationUpdate" />
-	<spring:message code="label_reservation_delete" var="labelReservationDelete" />
-	<spring:message code="date_format_pattern" var="dateFormatPattern" />
-	<spring:message code="text_there_are_no_reservations" var="textThereAreNoReservations" />
-	
-	
-	<spring:url value="/restaurants/${restaurant.id}/reservations" var="editReservationUrl" />
-	<spring:url value="/restaurants/${restaurant.id}/reservations" var="deleteReservationUrl" />
-	
-	<div class="row">
-		<h1>${labelReservationSubsystem}</h1>
-		<h2 class="restaurant muted">${labelRestaurant} <a href="${showRestaurant}">${restaurant.id}</a></h2>
+ 
+ <spring:message code="label_restaurant" var="labelRestaurant" />
+ <spring:message code="label_reservation_subsystem" var="labelReservationSubsystem" />
+ <spring:message code="label_reservation_description" var="labelReservationDescription" />
+ <spring:message code="label_reservation_update" var="labelReservationUpdate" />
+ <spring:message code="label_reservation_groupsize" var="labelReservationGroupSize" />
+ <spring:message code="label_reservation_customer_name" var="labelReservationCustomerName" />
+  <spring:message code="label_reservation_status" var="labelReservationStatus" />
+ <spring:message code="label_reservation_facility" var="labelReservationFacility" />
+ <spring:message code="label_reservation_name" var="labelReservationName" />
+ 
+ <spring:message code="label_reservation_info" var="labelReservationInfo" />
+ <spring:message code="label_reservation_word" var="labelReservationWord" />
+ <spring:message code="label_reservation_roomID" var="labelReservationRoomID" />
+ <spring:message code="label_reservation_price" var="labelReservationPrice" />
+ <spring:message code="label_reservation_save" var="labelReservationSave" />
+ 
+ <spring:message code="label_reservation_delete" var="labelReservationDelete" />
+ <spring:message code="date_format_pattern" var="dateFormatPattern" />
+ <spring:message code="text_there_are_no_reservations" var="textThereAreNoReservations" />
+  
+ <spring:url value="/restaurants/${restaurant.id}/reservations" var="saveReservationUrl" />
+ <spring:url value="/restaurants/${restaurant.id}/reservations" var="deleteReservationUrl" />
+ 
+ <div class="row">
+  <h1>${labelReservationSubsystem}</h1>
+  <h2 class="restaurant muted">${labelRestaurant} <a href="${showRestaurant}">${restaurant.id}</a></h2>
 
-		<c:if test="${not empty message}">
-			<div id="message" class="alert alert-info ${message.type}">${message.message}</div>
-		</c:if>
+  <c:if test="${not empty message}">
+   <div id="message" class="alert alert-info ${message.type}">${message.message}</div>
+  </c:if>
+ </div>
+ 
+ 
+ <div class="row">
+   <div class="panel panel-default">
+   <div class="panel-heading">
+    <h3 class="panel-title">${labelReservationInfo} ${reservation.id}</h3>
+    <sec:authorize access="hasRole('ROLE_EMPLOYEE')">
+     <span class="pull-right" style="height: 10px;">
+      <ul class="nav panel-tabs">
+       
+       <li>
+         <form action="${saveReservationUrl}/${reservation.id}" method="get">
+         <input type="hidden" name="form" />
+         <button type="submit" class="btn btn-succes">${labelReservationSave}</button>
+        </form>
+       </li>
+       
+       
+       <li>
+         <form action="${editReservationUrl}/${reservation.id}" method="get">
+         <input type="hidden" name="form" />
+         <button type="submit" class="btn btn-warning">${labelReservationUpdate}</button>
+        </form>
+       </li>
+       
+       <li>
+        <form action="${deleteReservationUrl}/${reservation.id}" method="get">
+         <input type="hidden" name="delete" />
+         <button type="submit" class="btn btn-danger">${labelReservationDelete}</button>
+        </form>
+       </li>
+      </ul>
+     </span>
+    </sec:authorize>
+   </div>
+   <div class="panel-body">
+
+ <div class="input-group input-group-100">
+     <span class="input-group-addon input-group-min-width" id="description" path="description">${labelReservationName}</span>
+     <input type="text" class="form-control capitalise" id="reservationDescription" value="${reservation.name}" readonly="true" />
+    </div>
+
+    <p />
+
+   <div class="input-group input-group-100">
+     <span class="input-group-addon input-group-min-width" id="description" path="description">${labelReservationGroupSize}</span>
+     <input type="text" class="form-control capitalise" id="reservationDescription" value="${reservation.groupSize}"  />
+    </div>
+	
+<div class="input-group input-group-100">
+     <span class="input-group-addon input-group-min-width" id="description" path="description">${labelReservationDescription}</span>
+	<input type="text" class="form-control capitalise" id="reservationDescription" value="${reservation.description}" readonly="true" />
+	</div>
+				
+	<div class="input-group input-group-100">
+     <span class="input-group-addon input-group-min-width" id="description" path="description">${labelReservationFacility}</span>
+	<input type="text" class="form-control capitalise" id="reservationDescription" value="${reservation.facility.description}" readonly="true" />
 	</div>
 	
-	
-	<div class="row">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">${labelReservationInfo}</h3>
-				<sec:authorize access="hasRole('ROLE_EMPLOYEE')">
-					<span class="pull-right" style="height: 10px;">
-						<ul class="nav panel-tabs">
-							<li>
-								<form action="${editReservationUrl}/${reservation.id}" method="get">
-									<input type="hidden" name="form" />
-									<button type="submit" class="btn btn-warning">${labelReservationUpdate}</button>
-								</form>
-							</li>
-							<li>
-								<form action="${deleteReservationUrl}/${reservation.id}" method="get">
-									<input type="hidden" name="delete" />
-									<button type="submit" class="btn btn-danger">${labelReservationDelete}</button>
-								</form>
-							</li>
-						</ul>
-					</span>
-				</sec:authorize>
-			</div>
-	<div class="input-group">
-					<span class="input-group-addon" id="description" path="description">${labelReservationName}</span>
-					<input type="text" class="form-control capitalise" id="reservationDescription" value="${reservation.name}" readonly="true" />
-				</div>
-
-				<p />
-
-				<div class="input-group">
-					<span class="input-group-addon" id="description" path="description">${labelReservationGroupSize}</span>
-					<input type="text" class="form-control capitalise" id="reservationDescription" value="${reservation.groupSize}" readonly="true" />
-				</div>
-	
+<div class="input-group input-group-100">
+     <span class="input-group-addon input-group-min-width" id="description" path="description">${labelReservationCustomerName}</span>
+	<input type="text" class="form-control capitalise" id="reservationDescription" value="${reservation.customer.firstName} ${reservation.customer.lastName}" readonly="true" />
 	</div>
-		</div>
-	</div>
-</div>
 	
+	 
+<div class="input-group input-group-100">
+     <span class="input-group-addon input-group-min-width" id="description" path="description">${labelReservationStatus}</span>
+	<input type="text" class="form-control capitalise" id="reservationDescription" value="${reservation.state.state}" readonly="true" />
+	</div>
+ 
+  </div>
+ </div>
+  </div>
+ </div>
